--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,7 @@
 ---
-
+import Layout from "../layouts/Layout.astro";
 ---
 
-<html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-        <meta name="viewport" content="width=device-width" />
-        <meta name="generator" content={Astro.generator} />
-        <title>Astro</title>
-    </head>
-    <body>
-        <h1>Hello there</h1>
-    </body>
-</html>
+<Layout title="home">
+    <h1>Hello there!</h1>
+</Layout>
