--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,6 +5,8 @@ interface Props {
 
 const { title } = Astro.props;
 
+import { Font } from "astro:assets";
+import Navigation from "../components/Navigation.astro";
 import "../styles/global.css";
 ---
 
@@ -15,8 +17,10 @@ import "../styles/global.css";
         <meta name="viewport" content="width=device-width" />
         <meta name="generator" content={Astro.generator} />
         <title>braxton fair - {title}</title>
+        <Font cssVariable="--font-jetbrains-mono" preload />
     </head>
-    <body>
+    <body class="bg-ctp-base text-ctp-text w-full min-h-screen font-mono">
+        <Navigation />
         <slot />
     </body>
 </html>
