--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,1 +1,6 @@
 @import "tailwindcss";
+@import "@catppuccin/tailwindcss/mocha.css";
+
+@theme inline {
+    --font-mono: var(--font-jetbrains-mono);
+}
