style: update spacing

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -2,10 +2,12 @@
 
 ---
 
-<nav class="border-b-ctp-text border-b-2 py-4">
-    <span class="tracking-wider"
-        ><span class="font-bold">taxborn</span>@web$<span class="font-black"
-            >_</span
-        ></span
-    >
+<nav class="border-b-ctp-text border-b-2 py-4 mb-4">
+    <div class="container mx-auto">
+        <span class="tracking-wider"
+            ><span class="font-bold">taxborn</span>@web$<span class="font-black"
+                >_</span
+            ></span
+        >
+    </div>
 </nav>
