--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,6 +21,8 @@ import "../styles/global.css";
     </head>
     <body class="bg-ctp-base text-ctp-text w-full min-h-screen font-mono">
         <Navigation />
-        <slot />
+        <div class="container mx-auto">
+            <slot />
+        </div>
     </body>
 </html>
