chore: enable cloudflare csp

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -3,11 +3,17 @@
 ---
 
 <nav class="border-b-ctp-text border-b-2 py-4 mb-4">
-    <div class="container mx-auto">
+    <div class="container mx-auto flex justify-between">
         <span class="tracking-wider"
             ><span class="font-bold">taxborn</span>@web$<span class="font-black"
                 >_</span
             ></span
         >
+
+        <ul>
+            <li class="inline"><a href="/">home</a></li>
+        </ul>
     </div>
 </nav>
+
+<style></style>
