style: add some basic styles

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,5 +3,15 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="home">
-    <h1>Hello there!</h1>
+    <h1>Hello, there!</h1>
+    <p>
+        Working on this, in the meantime you can reach out on <a
+            href="https://bsky.app/profile/taxborn.com">Bluesky</a
+        >.
+    </p>
+    <p>
+        Hosted on my <a href="https://git.mischief.town/nix-infra/nixcfg"
+            >personal Nix infrastructure</a
+        >, <a href="https://mischief.town">mischief.town</a>.
+    </p>
 </Layout>
