style: add background image

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,9 +5,10 @@ interface Props {
 
 const { title } = Astro.props;
 
-import { Font } from "astro:assets";
+import { Font, Image } from "astro:assets";
 import Navigation from "../components/Navigation.astro";
 import "../styles/global.css";
+import bgImage from "../img/mandelbrot_full_magenta.png";
 ---
 
 <html lang="en">
@@ -19,7 +20,15 @@ import "../styles/global.css";
         <title>braxton fair - {title}</title>
         <Font cssVariable="--font-jetbrains-mono" preload />
     </head>
-    <body class="bg-ctp-base text-ctp-text w-full min-h-screen font-mono">
+    <body
+        class="relative bg-ctp-base text-ctp-text w-full min-h-screen font-mono overflow-x-hidden"
+    >
+        <Image
+            src={bgImage}
+            alt="A zoomed out view of the mandelbrot set. Colorized using catppuccin, specifically the mauve color."
+            class="fixed inset-0 w-full h-full object-cover blur-sm -z-10 select-none pointer-events-none"
+            aria-hidden="true"
+        />
         <Navigation />
         <div class="container mx-auto">
             <slot />
