--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -2,18 +2,18 @@
 
 ---
 
-<nav class="border-b-ctp-text border-b-2 py-4 mb-4">
+<nav class="sticky top-0 z-10 py-4 mb-4 bg-ctp-base/90 shadow-sm">
     <div class="container mx-auto flex justify-between">
         <span class="tracking-wider"
-            ><span class="font-bold">taxborn</span>@web$<span class="font-black"
-                >_</span
-            ></span
+            ><span class="font-bold">taxborn</span>@<span class="text-ctp-mauve"
+                >web</span
+            >$<span class="font-black">_</span></span
         >
 
         <ul>
             <li class="inline"><a href="/">home</a></li>
         </ul>
     </div>
-</nav>
 
-<style></style>
+    <style></style>
+</nav>
