style: start man page styling

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,14 +11,23 @@ import "../styles/global.css";
         <title>braxton fair - home</title>
         <Font cssVariable="--font-jetbrains-mono" preload />
     </head>
-    <body class="bg-ctp-base text-ctp-text w-full min-h-screen font-mono">
-        <div class="container mx-auto">
+    <body class="bg-ctp-base text-ctp-text w-full min-h-screen font-mono p-8">
+        <header class="flex justify-between">
+            <p><span class="underline uppercase">taxborn</span>(1)</p>
+            <p>Braxton Fair</p>
+            <p><span class="underline uppercase">taxborn</span>(1)</p>
+        </header>
+
+        <footer class="flex justify-between">
+            <!-- TODO: last git commit -->
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Accusamus quibusdam voluptates voluptatem voluptate perspiciatis
-                similique reiciendis animi? Culpa cumque dignissimos adipisci
-                cupiditate quisquam facilis, magnam, ex iusto quis neque sequi?
+                <a href="https://git.mischief.town/taxborn/taxborn.com"
+                    >cb013ef73d</a
+                >
             </p>
-        </div>
+            <!-- TODO: last commit time? -->
+            <p>2025-02-18</p>
+            <p><span class="underline uppercase">taxborn</span>(1)</p>
+        </footer>
     </body>
 </html>
