--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -71,14 +71,14 @@ if (lastfmApiKey) {
                         > on bluesky
                     </li>
                     <li>
-                        @taxborn on <a href="https://git.mischief.town/taxborn"
+                        <a href="https://git.mischief.town/taxborn">@taxborn</a> on
+                        <a href="https://git.mischief.town/"
                             >my forgejo instance</a
                         >
                     </li>
-                    <li class="italic text-ctp-overlay0">
-                        @taxborn on <a href="https://git.mischief.town/taxborn"
-                            >github</a
-                        >, but it's mostly just a mirror of forgejo.
+                    <li class="subtext">
+                        <a href="https://github.com/taxborn">@taxborn</a> on github,
+                        but it's mostly just a mirror of forgejo.
                     </li>
                 </ul>
             </ManSection>
@@ -87,8 +87,9 @@ if (lastfmApiKey) {
                 <p>
                     A 20-something software engineer at <a
                         href="https://thomsonreuters.com">Thomson Reuters</a
-                    >. Working with Java, Spring, and building robust APIs. I've
-                    been programming for <a
+                    >. Working with Java, Spring, with a focus in the backend
+                    but sometimes working on frontend (MFEs, React). I've been
+                    programming for <a
                         href="https://git.mischief.town/taxborn/ConnectU"
                         >a bit over a decade</a
                     >, but currently interested in Zig, atproto, and Nix.
@@ -110,6 +111,10 @@ if (lastfmApiKey) {
                                     from <em>{recentTrack.album}</em>
                                 </>
                             )}
+                        </p>
+                        <p class="subtext">
+                            Data currently sourced from last.fm, hoping to pivot
+                            to teal.fm once that opens up :)
                         </p>
                     </ManSection>
                 )
