feat: start on now and uses pages

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,6 +45,17 @@ if (lastfmApiKey) {
     </ManSection>
 
     <ManSection title="synopsis">
+        <ul class="">
+            <li>
+                <a href="/uses">/uses</a> - the stuff I use day-to-day
+            </li>
+            <li>
+                <a href="/now">/now</a> - what I'm up to lately
+            </li>
+        </ul>
+    </ManSection>
+
+    <ManSection title="socials">
         <ul class="list-disc list-inside">
             <li>
                 <a href="https://bsky.app/profile/taxborn.com">@taxborn.com</a> on
