feat: add the colophon

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,12 +45,15 @@ if (lastfmApiKey) {
     </ManSection>
 
     <ManSection title="synopsis">
-        <ul class="">
+        <ul>
             <li>
                 <a href="/uses">/uses</a> - the stuff I use day-to-day
             </li>
             <li>
-                <a href="/now">/now</a> - what I'm up to lately
+                <a href="/now">/now</a> - what i'm up to lately
+            </li>
+            <li>
+                <a href="/colophon">/colophon</a> - about this site
             </li>
         </ul>
     </ManSection>
